fixed the css that caused the first card to be misaligned with the other cards

--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
 * {
-  box-sizing:border-box; 
-   margin: 0;
-   padding: 0;
-   font-family: 'Inter', sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Inter", sans-serif;
 }
 
 .header {
   width: 100%;
   padding: 2em 3.437em;
-  background:#4286f4;
+  background: #4286f4;
   text-align: center;
-  color:#FFFFFF;
+  color: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,33 +18,34 @@
 }
 
 .container {
-   display: flex;
-  flex-direction: column; 
-   align-items:center; 
-   justify-content: center;
+  display: block;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding: 6.25em 2.5em;
   width: 100%;
-  height:100vh;
-  
- 
+  height: fit-content;
+  margin-bottom: 1rem;
 }
 
-.container-info, .travel-location {
+.container-info,
+.travel-location {
   display: flex;
   gap: 1.187em;
-  align-items:center;
-  
+  align-items: center;
 }
 
-.travel-location, .title, .dates {
+.travel-location,
+.title,
+.dates {
   margin-bottom: 0.5em;
 }
 
 .container-info {
-  justify-content: center;
+  /* justify-content: center; */
 }
 
-.img{
+.img {
   width: 130px;
   height: 250px;
   border-radius: 5px;
@@ -52,12 +53,12 @@
 
 .location-link {
   font-size: 0.7em;
-  color:#918E9B;
+  color: #918e9b;
   text-transform: capitalize;
 }
 
 .location {
-  color:#918E9B;
+  color: #918e9b;
   margin-left: -13px;
 }
 
